# duckdb-pandas-polars

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
duckdb/: pyproject.toml  top_domain.py
pandas/: pyproject.toml  top_domain.py
polars/: pyproject.toml  top_domain.py
